# scope-sim

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: basic_capture.py
src/scope_sim/: __init__.py  adc.py  analog.py  dac.py  measurements.py  scope.py  viewer.py  visualization.py  waveform.py
tests/: test_models.py  test_scope_measurements.py  test_viewer.py  test_waveform.py
